force-app/main/default/objects/Warehouse__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Active Warehouse will appear as Forecasting option</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>