force-app/main/default/objects/Warehouse__c/fields/Region_New__c.field-meta.xml
<CustomField>
    <fullName>Region_New__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>