force-app/main/default/objects/Warehouse__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>