force-app/main/default/objects/Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>Entity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Region_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>